--- a/jobs/templates/_macro.html
+++ b/jobs/templates/_macro.html
@@ -2,12 +2,16 @@
 <div class="card adjust-height">
   <header class="card-header">
     <p class="card-header-title">
-	<a href="">{{job['employer_name']}}</a>
-	${{ job['salary']}}<br>
+	 <a href="">{{job['title']}}</a>
     </p>
   </header>
   <div class="card-content">
     <div class="content">
+        <p>
+            <a href="">{{job['employer_name']}}</a>
+	        ${{ job['salary']}}<br>
+            {{ job['description']}}
+        </p>
     </div>
   </div>
 </div>
@@ -19,4 +23,4 @@
 	 <div classs="colum is-half">
 	  {{ show_job(job)}}
          </div>
-	{% endfor%}
+	{% endfor %}
