--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -2,25 +2,28 @@
 <div class="card adjust-height">
   <header class="card-header">
     <p class="card-header-title">
-	 <a href="">{{ job['title'] }}</a>
+      <a href="{{ url_for('job', job_id=job['id']) }}">{{ job['title'] }}</a>
     </p>
   </header>
   <div class="card-content">
     <div class="content">
-        <p>
-            <a href="">{{job['employer_name']}}</a>
-	        ${{ job['salary']}}<br>
-            {{ job['description']}}
-        </p>
+      <p>
+        <a href="{{ url_for('employer', employer_id=job['employer_id']) }}">{{ job['employer_name'] }}</a><br>
+        ${{ job['salary'] }}<br>
+        {{ job['description'] }}
+      </p>
     </div>
   </div>
 </div>
 {% endmacro %}
 
-{% macro show_job(jobs)%}
-<div class="Colums is-multiline">
-	{% for job in jobs %}
-	 <div classs="colum is-half">
-	  {{ show_job(job)}}
-     </div>
-	{% endfor %}
+{% macro show_jobs(jobs) %}
+<div class="columns is-multiline">
+  {% for job in jobs %}
+    <div class="column is-half">
+      {{ show_job(job) }}
+    </div>
+  {% endfor %}
+
+</div>
+{% endmacro %}
